--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#356F19</color>
+    <color name="colorPrimaryDark">#356F19</color>
+    <color name="colorAccent">#356F19</color>
     <color name="textColor">#3F7E42</color>
     <color name="Black">#000000</color>
     <color name="white">#FFFFFF</color>
